--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>este es un sitio web creado con GitHub Pages</h1>
 <p> Y fue creado para aprender git y giothub con Platzi</p>
-<p><img src= "https://imgur.com/gallery/Vps7WEB"/><p>
+<p><img src= "https://i.imgur.com/ZKyVkrt.gif"/></p>
